--- a/program1/program1/program1.vcxproj
+++ b/program1/program1/program1.vcxproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="d_random.h" />
+    <ClInclude Include="d_except.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
