--- a/program2/program2/program2.vcxproj
+++ b/program2/program2/program2.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="program.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="d_except.h" />
     <ClInclude Include="d_node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
