--- a/program2/program2/program2.vcxproj
+++ b/program2/program2/program2.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="d_except.h" />
     <ClInclude Include="d_node.h" />
+    <ClInclude Include="d_random.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
