--- a/program2/program2/program2.vcxproj.filters
+++ b/program2/program2/program2.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="d_except.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="d_random.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
